--- a/.github/workflows/lighthouse.yml
+++ b/.github/workflows/lighthouse.yml
@@ -1,5 +1,5 @@
 name: Lighthouse CI
-on: ["push", "pull_request"]
+on: pull_request
 jobs:
   lighthouse:
     runs-on: ubuntu-latest
@@ -12,16 +12,19 @@ jobs:
       - name: Waiting for the Netlify Preview
         uses: jakepartusch/wait-for-netlify-action@v1
         with:
-          site_name: "developers-italia"
+          # site_name: "developers-italia"
+          #
+          site_name: "adoring-lalande-cb9e63"
           max_timeout: 60
       - name: Run Lighthouse
         uses: treosh/lighthouse-ci-action@v3
         with:
           urls: |
-            https://developers-italia.netlify.com
-            https://developers-italia.netlify.com/it/software
-            https://developers-italia.netlify.com/en/software
-          netlifySite: 'developers-italia.netlify.com'
+            https://adoring-lalande-cb9e63.netlify.com
+            https://adoring-lalande-cb9e63.netlify.com/it/software
+            https://adoring-lalande-cb9e63.netlify.com/en/software
+          # netlifySite: 'developers-italia.netlify.com'
+          netlifySite: 'adoring-lalande-cb9e63.netlify.com'
           applicationGithubToken: ${{ secrets.GITHUB_TOKEN }}
           personalGithubToken: ${{ secrets.GITHUB_TOKEN_PERMISSIONS }}
           # budgetPath: ../lighthouse/budget.json
